--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -166,3 +166,15 @@
     {% endfor %}
 
 {% endif %}
+
+
+{% if debug %}
+<div id="toast-container" class="toast-bottom-right">
+        <div class="toast toast-error" aria-live="polite">
+            <div class="toast-progress" style="width: 0%;"></div>
+            <button type="button" class="toast-close-button" role="button" onclick="close_toast()">×</button>
+            <div class="toast-title">DEVELOPMENT MODE!</div>
+            <div class="toast-message">The application is running in debug</div>
+        </div>
+</div>
+{% endif %}
