--- a/prime_admin/templates/lms/client_upgrade_modal.html
+++ b/prime_admin/templates/lms/client_upgrade_modal.html
@@ -73,9 +73,11 @@
                             <table id="tbl_upgrade_payment_history" class="mb-0 table">
                                 <thead>
                                 <tr>
-                                    <th>Amount</th>
-                                    <th>Current Balance</th>
-                                    <th>Date</th>
+                                    <th class="text-center">AMOUNT</th>
+                                    <th class="text-center">CURRENT BALANCE</th>
+                                    <th class="text-center">DATE</th>
+                                    <th class="text-center">REMARKS</th>
+                                    <th class="text-center">DEPOSITED</th>
                                 </tr>
                                 </thead>
                                 <tbody>
