fix: cash flow update payment remarks

--- a/app/auth/templates/auth/user_register.html
+++ b/app/auth/templates/auth/user_register.html
@@ -12,7 +12,7 @@
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
-
+    <link rel="shortcut icon" href="{{ url_for('bp_admin.static', filename='img/favicon.ico') }}">
     <link href="{{ url_for('bp_auth.static', filename='css/main_pro.css') }}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
 
