--- a/app/auth/templates/auth/new_user_login.html
+++ b/app/auth/templates/auth/new_user_login.html
@@ -12,7 +12,7 @@
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
-
+    <link rel="shortcut icon" href="{{ url_for('bp_admin.static', filename='img/favicon.ico') }}">
     <link href="{{ url_for('bp_auth.static', filename='css/main_pro.css') }}" rel="stylesheet">
 
     <style>
