feat: releasing of marketers earnings

--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -89,6 +89,9 @@
                                             <option value="Student Loan Payment">
                                                 Student Loan Payment
                                             </option>
+                                            <option value="Emergency Fund">
+                                                Emergency Fund
+                                            </option>
                                         </select>
                                         <div class="valid-feedback">
                                             Looks good!
