--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -52,7 +52,7 @@
                 <div class="nav">
 
                     <div class="dropleft btn-group">
-                        {% if current_user.role.name == "Marketer" %}
+                        {% if current_user.role.name == "Marketer" or current_user.role.name == "Partner" %}
                         <button value="{{TABLE_OPTIONS['marketers'][0].id}}" id="btn_marketer_label" type="button" aria-haspopup="true" aria-expanded="false"
                             data-toggle="dropdown" class="btn-wide mb-2 mr-2 dropdown-toggle btn btn-primary">
                             {{TABLE_OPTIONS['marketers'][0].fname.upper()}}
@@ -191,6 +191,69 @@
             </div>
         </div>
     </div>
+
+        
+    {% if current_user.role.name == "Partner" %}
+    <div class="main-card mb-3 card">
+        <div class="card-header">
+            <div>
+                PROFIT SHARING
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-6 col-xl-6">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">TOTAL EARNINGS</div>
+                                <div class="widget-subheading"></div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-success"><span id="total_earnings">₱ 0.00</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-xl-6">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">SAVINGS</div>
+                                <div class="widget-subheading"></div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-warning"><span id="total_savings">₱ 0.00</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <ul id="list_branches_total_earnings" class="list-group">
+                {% for branch in TABLE_OPTIONS['branches'] %}
+                <li class="list-group-item">
+                    <div class="widget-content p-0">
+                        <div class="widget-content-outer">
+                            <div class="widget-content-wrapper">
+                                <div class="widget-content-left">
+                                    <div class="widget-heading">{{branch.name}}</div>
+                                    <div class="widget-subheading">Total Earnings</div>
+                                </div>
+                                <div class="widget-content-right">
+                                    <div class="widget-numbers text-primary">₱ 0.00</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    {% endif %}
+    
 </div>
 {% endblock %}
 
