--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -29,6 +29,7 @@
 
             <div class="page-title-actions">
                 {% if session['permissions'][RENDERED_MODEL.__amname__] is defined %}
+                    <!-- {% if current_user.role.name == "Secretary" or current_user.role.name == "Partner" %} -->
                     {% if current_user.role.name == "Secretary" %}
                     <button type="button" data-toggle="modal" data-target="#mdl_pre_deposit" data-placement="bottom"
                             class="btn-shadow mr-3 btn btn-primary">
@@ -36,6 +37,7 @@
                     </button>
                     {% endif %}
 
+                    <!-- {% if current_user.role.name == "Secretary" or current_user.role.name == "Partner" %} -->
                     {% if current_user.role.name == "Secretary" %}
                     <button type="button" data-toggle="modal" data-target="#mdl_deposit" data-placement="bottom"
                             class="btn-shadow mr-3 btn btn-primary">
