--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -90,7 +90,7 @@
                         <div class="widget-content-wrapper">
                             <div class="widget-content-left">
                                 <div class="widget-heading">TOTAL EARNINGS</div>
-                                <div class="widget-subheading"></div>
+                                <div class="widget-subheading">Current Earnings</div>
                             </div>
                             <div class="widget-content-right">
                                 <div class="widget-numbers text-success"><span id="total_earnings">₱ 0.00</span></div>
@@ -104,10 +104,40 @@
                         <div class="widget-content-wrapper">
                             <div class="widget-content-left">
                                 <div class="widget-heading">SAVINGS</div>
-                                <div class="widget-subheading"></div>
+                                <div class="widget-subheading">Current Savings</div>
                             </div>
                             <div class="widget-content-right">
                                 <div class="widget-numbers text-warning"><span id="total_savings">₱ 0.00</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-6 col-xl-6">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">TOTAL EARNINGS CLAIMED</div>
+                                <div class="widget-subheading">Past Earnings</div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-info"><span id="total_earnings_claimed">₱ 0.00</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-xl-6">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">TOTAL SAVINGS CLAIMED</div>
+                                <div class="widget-subheading">Past Savings</div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-info"><span id="total_savings_claimed">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
@@ -122,7 +152,7 @@
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left">
                                     <div class="widget-heading">{{branch.name}}</div>
-                                    <div class="widget-subheading">Total Earnings</div>
+                                    <div class="widget-subheading">Current Earnings</div>
                                 </div>
                                 <div class="widget-content-right">
                                     <div class="widget-numbers text-primary">₱ 0.00</div>
