feat: add partner percent profit sharing

--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -169,7 +169,7 @@
 
 
 {% if debug %}
-<div id="toast-container" class="toast-bottom-right">
+<div id="toast-container" class="toast-bottom-left">
         <div class="toast toast-error" aria-live="polite">
             <div class="toast-progress" style="width: 0%;"></div>
             <button type="button" class="toast-close-button" role="button" onclick="close_toast()">×</button>
