--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -116,7 +116,7 @@
 
                     <div style="display: none;" id="tbl_deposit" class="main-card mb-3 card">
                         <div class="card-body">
-                            <table id="tbl_mdl_deposit" style="width:100%; cursor:pointer;" class="table-responsive mb-0 table">
+                            <table id="tbl_mdl_deposit" style="width:100%; cursor:pointer;" class="mb-0 table">
                             <thead>
                                 <tr>
                                     <th>REGISTRATION NO.</th>
