--- a/prime_admin/templates/lms/pre_deposit_modal.html
+++ b/prime_admin/templates/lms/pre_deposit_modal.html
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
                         </div>
-                        <table id="tbl_mdl_pre_deposit" style="width:100%; cursor:pointer;" class="table-responsive mb-0 table">
+                        <table id="tbl_mdl_pre_deposit" style="width:100%; cursor:pointer;" class="mb-0 table">
                         <thead>
                             <tr>
                                 <th>ADD</th>
