--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -194,12 +194,7 @@
                     <div class="position-relative form-group">
                         <label for="batch_no" class="">Batch No.</label>
                         <select name="batch_no" id="batch_no" class="form-control" required>
-                            <option value="all">All</option>
-                            {% for batch in TABLE_OPTIONS['batch_numbers'] %}
-                            <option value="{{ batch.id }}">
-                                {{ batch.number }}
-                            </option>
-                            {% endfor %}
+                            <option value="all">Please select branch first</option>
                         </select>
                     </div>
                 </div>
