--- a/prime_admin/templates/lms/orientation_attendance.html
+++ b/prime_admin/templates/lms/orientation_attendance.html
@@ -240,6 +240,23 @@
     <div class="main-card mb-3 card"><h5 class="card-header">Members</h5>
         <div class="card-body">
             <div class="form-row">
+                <div class="col-md-4">
+                    <div class="position-relative form-group">
+                        <label for="lname" class="">Search</label>
+                        <div class="input-group">
+                            <div class="input-group-append">
+                                <input id="search_input" placeholder="Last Name" type="text" class="form-control">
+                                <button id="btn_search" class="btn btn-primary"><i class="pe-7s-search">
+                                    </i></button>
+                                <button id="btn_clear_entry" class="border-0 btn-transition btn btn-outline-danger"><i
+                                        class="pe-7s-close">
+                                    </i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                </div>
                 <div class="col-md-2">
                     <div class="position-relative form-group">
                         <label for="branch_filter" class="">Branch</label>
@@ -258,8 +275,6 @@
                             Please provide a schedule
                         </div>
                     </div>
-                </div>
-                <div class="col-md-8">
                 </div>
                 <div class="col-md-2">
                     <div class="position-relative form-group">
