--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -199,7 +199,7 @@
     <div class="main-card mb-3 card">
         <div class="card-body">
             <div class="form-row">
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <div class="position-relative form-group">
                         <label for="lname" class="">Search</label>
                         <div class="input-group">
@@ -216,8 +216,20 @@
                 </div>
                 <div class="col-md-2">
                     <div class="position-relative form-group">
-                        <label for="address" class="">Date From</label>
-                        <input disabled name="address" id="address" type="date" class="form-control">
+                        <label for="date_from" class="">Date From</label>
+                        <input id="date_from" type="date" class="form-control">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                            Please provide a valid date of birth
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="position-relative form-group">
+                        <label for="date_to" class="">Date To</label>
+                        <input id="date_to" type="date" class="form-control">
                         <div class="valid-feedback">
                             Looks good!
                         </div>
