feat: remarks field in deposit and withdraw

--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -51,6 +51,12 @@
                                     <div class="position-relative form-group"><label for="account_no"
                                             class="">Account No.</label><input name="account_no" id="account_no"
                                             type="text" class="form-control" required></div>
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide an account no.
+                                            </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="account_name"
@@ -97,7 +103,7 @@
                                             Looks good!
                                         </div>
                                         <div class="invalid-feedback">
-                                            Please provide a schedule
+                                            Please provide value
                                         </div>
                                     </div>
                                 </div>
@@ -108,6 +114,24 @@
                                     <div class="position-relative form-group"><label for="by_who"
                                             class="">By Who</label><input name="by_who" id="by_who"
                                             type="text" class="form-control" required>
+                                            </div>
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide value
+                                            </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="position-relative form-group"><label for="remarks"
+                                            class="">Remarks</label><input name="remarks" id="remarks"
+                                            type="text" class="form-control" required>
+                                            </div>
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide a remark
                                             </div>
                                 </div>
                             </div>
