--- a/prime_admin/templates/lms/withdraw_modal.html
+++ b/prime_admin/templates/lms/withdraw_modal.html
@@ -97,7 +97,7 @@
                                             Looks good!
                                         </div>
                                         <div class="invalid-feedback">
-                                            Please provide a schedule
+                                            Please provide value
                                         </div>
                                     </div>
                                 </div>
@@ -127,6 +127,27 @@
                                     <div class="position-relative form-group"><label for="by_who"
                                             class="">By Who</label><input name="by_who" id="by_who"
                                             type="text" class="form-control">
+                                            </div>
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide value
+                                            </div>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <div class="position-relative form-group"><label for="by_who"
+                                            class="">Remarks</label><input name="remarks" id="remarks"
+                                            type="text" class="form-control">
+                                            </div>
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide a remark
                                             </div>
                                 </div>
                             </div>
