--- a/prime_admin/templates/lms/dashboard.html
+++ b/prime_admin/templates/lms/dashboard.html
@@ -76,8 +76,17 @@
     <div class="row">
         <div class="col-md-12">
             <div class="main-card mb-3 card">
+                <div class="card-header"><i class="header-icon lnr-gift icon-gradient bg-grow-early"> </i>SALES & EXPENSES
+                    <div class="btn-actions-pane-right">
+                        <div class="nav">
+                            {% for branch in options['branches'] %}
+                                <button value="{{branch.id}}" class="{{branch.name}} btn-branch border-0 btn-transition btn btn-outline-primary">{{branch.name}}</button>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
                 <div class="card-body"><div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-                    <h5 class="card-title">SALES & EXPENSES</h5>
+                    <h5 class="card-title"></h5>
                     <canvas id="chart_sales" height="400" class="chartjs-render-monitor" style="display: block; width: 378px; height: 300px;" width="378"></canvas>                </div>
             </div>
         </div>
