--- a/prime_admin/templates/lms/withdraw_modal.html
+++ b/prime_admin/templates/lms/withdraw_modal.html
@@ -23,7 +23,7 @@
                                     <div class="position-relative form-group"><label for="date_deposit"
                                             class="">Date</label>
                                             <input name="date_deposit" id="date_deposit"
-                                            type="date" class="form-control" required>
+                                            type="datetime" class="form-control" required>
                                             <div class="valid-feedback">
                                                 Looks good!
                                             </div>
