--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -90,10 +90,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Update Payment & Materials</h5>
                             <div class="form-row">
-                                <div class="col-md-3 mb-3">
+                                <div class="col-md-1 mb-3">
                                 </div>
-
-                                <div class="col-md-6 mb-3">
+                                <div class="col-md-5 mb-3">
                                     <div class="position-relative form-group">
                                         <div>
                                             <div class="custom-checkbox custom-control">
@@ -102,7 +101,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 mb-3">
+
+                                <div class="col-md-5 mb-3">
+                                    <div class="position-relative form-group">
+                                        <div>
+                                            <div class="custom-checkbox custom-control">
+                                                <input name="chkbox_upgrade_full_payment" type="checkbox" id="chkbox_upgrade_full_payment" class="custom-control-input">
+                                                <label class="custom-control-label" for="chkbox_upgrade_full_payment"><strong>UPGRADE TO FULL PAYMENT</strong></label></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-row">
