--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -162,6 +162,9 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                {% if current_user.role.name in ['Secretary', 'Admin', 'Partner'] %}
+                <button disabled id="btn_refund" type="button" class="btn btn-danger">Refund</button>
+                {% endif %}
                 <button id="btn_print_student_info" type="button" class="btn btn-info">Print Student Information</button>
                 {% if current_user.role.name in ['Secretary', 'Admin', 'Partner'] %}
                 <button id="btn_edit" type="button" class="btn btn-primary">Edit</button>
