feat: add color coding in students table

--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -13,6 +13,14 @@
     ROLE = "{{current_user.role.name}}";
 </script>
 <style>
+    .row-not-deposit{
+        color:#806013 !important;
+        background-color: #fdebc2 !important;
+    }
+    .row-not-paid {
+        color:#71132a !important;
+        background-color: #f4c2ce !important;
+    }
     .modal-dialog {
         overflow-y: initial !important
     }
