--- a/prime_admin/templates/lms/outbound_modal.html
+++ b/prime_admin/templates/lms/outbound_modal.html
@@ -48,7 +48,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-success">Confirm</button>
+                        <button disabled type="submit" class="btn btn-success">Confirm</button>
                     </div>
                 </form>
             </div>
