--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -222,6 +222,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-1">
+                    <div class="position-relative form-group">
+                        <label for="payment_status" class="">Payment Status</label>
+                        <select name="payment_status" id="payment_status" class="form-control" required>
+                            <option value="all">All</option>
+                            <option value="PAID">
+                                PAID
+                            </option>
+                            <option value="NOT PAID">
+                                NOT PAID
+                            </option>
+                        </select>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                            Please provide a schedule
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-2">
                     <div class="position-relative form-group">
                         <label for="date_from" class="">Date From</label>
@@ -265,7 +287,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-1">
                     <div class="position-relative form-group">
                         <label for="batch_no" class="">Batch No.</label>
                         <select name="batch_no" id="batch_no" class="form-control" required>
@@ -288,7 +310,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-1">
                     <div class="position-relative form-group">
                         <label for="schedule" class="">Schedule</label>
                         <select name="schedule" id="schedule" class="form-control" required>
